--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  page_transition: ^2.0.9
-  google_fonts: ^3.0.1
-  flip_card: ^0.6.0
-  fluttertoast: ^8.0.9
-  english_words: ^4.0.0
+  cupertino_icons:
+  page_transition:
+  google_fonts:
+  flip_card:
+  fluttertoast:
+  english_words:
+  flutter_easyloading:
+  flutter_progress_hud:
 
 dev_dependencies:
   flutter_test:
